k8s/apps/kuard/base/kuard-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kuard-ingress
  namespace: kuard
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kuard.<path:subdomain#SUBDOMAIN>`) # <-- Replace with your FQDN
      kind: Rule
      services:
        - name: kuard
          port: 80
  tls:
    secretName: kuard-web-ui-tls
